# OS2

./: Makefile  README.md  pyproject.toml  requirements.txt
cli/: __init__.py  ai_determinism.py  ai_executor.py  ai_replay.py  async_queue.py  audit_diff.py  backup_manager.py  boot_model_loader.py  cas.py  command_shell.py  deterministic_benchmark.py  deterministic_recompile.py  documentation.py  download_manager.py  entropy_audit.py  feedback_hooks.py  gpu_manager.py  hf_client.py  import_verifier.py  integrity_monitor.py  kernel_log.py  kernel_metrics.py  kernel_performance.py  kernel_updates.py  ledger_inspect.py  living_system.py  llm_adapter.py  model_registry.py  model_sources.py  model_verifier.py  module_cleaner.py  module_permissions.py  python_determinism.py  python_env.py  python_vm.py  rlhf_pipeline.py  runtime_loader.py  security_log.py  self_feedback.py  self_task_review.py  (+9 more)
docs/: CapabilityLimits.toml  kernel_management.md  kernel_protocol.md  observability.md  (+5 more)
rust/os2-boot/: Cargo.toml  linker.ld  x86_64-bootloader.json
rust/os2-boot/src/: main.rs  serial.rs
rust/os2-kernel/: Cargo.toml
rust/os2-kernel/examples/: demo.rs  kernel_daemon_config.json  microkernel.rs  pipeline.rs  python_agent.rs
rust/os2-kernel/logs/: sample.jsonl
rust/os2-kernel/src/: capability.rs  capability_chain.rs  clock.rs  entropy.rs  event_bus.rs  evolution.rs  io_queue.rs  kernel.rs  lib.rs  memory.rs  metrics.rs  microkernel.rs  model_routing.rs  python_host.rs  resource.rs  resource_monitor.rs  rlhf.rs  scheduler.rs  security.rs  snapshot.rs  symbolic.rs  telemetry.rs  token_signing.rs  tooling.rs  wasm_host.rs
rust/os2-kernel/tests/: event_replay_cli.rs  kernel_daemon_cli.rs
(+39 files in other folders)
