[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "os2-cli"
version = "0.1.0"
description = "PIYXU OS2 command shell utilities"
readme = "README.md"
authors = [{ name = "PIYXU OS2 Team" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []

[project.scripts]
os2-shell = "cli.command_shell:main"

[tool.setuptools.packages.find]
include = ["cli*"]
